--- a/project/SPTarkov.Launcher/Shared/NavMenu.razor
+++ b/project/SPTarkov.Launcher/Shared/NavMenu.razor
@@ -1,20 +1,22 @@
-﻿<MudNavMenu Class="mud-typography-nowrap">
-    <MudTooltip Arrow="true" Placement="Placement.Right" ShowOnHover="true" Text="Home" Inline="false">
+﻿@inject LocaleHelper LocaleHelper
+
+<MudNavMenu Class="mud-typography-nowrap">
+    <MudTooltip Arrow="true" Placement="Placement.Right" ShowOnHover="true" Text="@(LocaleHelper.Get("home"))" Inline="false">
         <MudNavLink IconColor="Color.Default" Icon="@Icons.Material.Filled.ConnectedTv" Match="NavLinkMatch.All" Href="/ServerPageWrapper" />
     </MudTooltip>
 </MudNavMenu>
 <MudSpacer/>
 <MudNavMenu Class="mud-typography-nowrap">
-    <MudTooltip Arrow="true" Text="Mod Loader" Placement="Placement.Right" Inline="false">
+    <MudTooltip Arrow="true" Text="@(LocaleHelper.Get("mod_loader"))" Placement="Placement.Right" Inline="false">
         <MudNavLink IconColor="Color.Default" Icon="@Icons.Material.Filled.Reorder" Match="NavLinkMatch.All" Href="/ModLoader"/>
     </MudTooltip>
     <MudTooltip Arrow="true" Text="Forge" Placement="Placement.Right" Inline="false">
         <MudNavLink IconColor="Color.Default" Icon="@Icons.Material.Filled.FolderZip" Match="NavLinkMatch.All" Href="/Forge"/>
     </MudTooltip>
-    <MudTooltip Arrow="true" Text="Settings" Placement="Placement.Right" Inline="false">
+    <MudTooltip Arrow="true" Text="@(LocaleHelper.Get("settings"))" Placement="Placement.Right" Inline="false">
         <MudNavLink IconColor="Color.Default" Icon="@Icons.Material.Filled.Settings" Match="NavLinkMatch.All" Href="/Settings"/>
     </MudTooltip>
-    <MudTooltip Arrow="true" Text="Info" Placement="Placement.Right" Inline="false">
+    <MudTooltip Arrow="true" Text="@(LocaleHelper.Get("info"))" Placement="Placement.Right" Inline="false">
         <MudNavLink IconColor="Color.Default" Icon="@Icons.Material.Filled.Info" Match="NavLinkMatch.All" Href="/Info"/>
     </MudTooltip>
 </MudNavMenu>
