--- a/project/SPTarkov.Launcher/Pages/Info.razor
+++ b/project/SPTarkov.Launcher/Pages/Info.razor
@@ -1,18 +1,19 @@
 ﻿@page "/Info"
 
+@inject LocaleHelper LocaleHelper
+
 <MudContainer Class="px-8 my-2 pa-0" MaxWidth="MaxWidth.Large">
     <MudGrid>
-        <InfoCardComponent Name="Hub" Description="The current home of SPT" Link="https://hub.sp-tarkov.com/"/>
-        <InfoCardComponent Name="Forge" Description="The greatest resource available for Single Player Tarkov modifications." Link="https://forge.sp-tarkov.com/"/>
-        <InfoCardComponent Name="Github" Description="The Github for all SPT related Repositries" Link="https://github.com/sp-tarkov"/>
-        <InfoCardComponent Name="Discord" Description="The SPT Discord" Link="https://discord.com/invite/Q7dhKh4e"/>
-        <InfoCardComponent Name="Escape From Tarkov Wiki" Description="Escape From Tarkov Wiki" Link="https://escapefromtarkov.fandom.com/wiki/Escape_from_Tarkov_Wiki"/>
-        <InfoCardComponent Name="Wiki Changelog" Description="Wiki Changelog" Link="https://escapefromtarkov.fandom.com/wiki/Changelog"/>
+        <InfoCardComponent Name="Hub" Description="@(LocaleHelper.Get("info_hub_desc"))" Link="https://hub.sp-tarkov.com/"/>
+        <InfoCardComponent Name="Forge" Description="@(LocaleHelper.Get("info_forge_desc"))" Link="https://forge.sp-tarkov.com/"/>
+        <InfoCardComponent Name="Github" Description="@(LocaleHelper.Get("info_github_desc"))" Link="https://github.com/sp-tarkov"/>
+        <InfoCardComponent Name="Discord" Description="@(LocaleHelper.Get("info_discord_desc"))" Link="https://discord.com/invite/Q7dhKh4e"/>
+        <InfoCardComponent Name="Escape From Tarkov Wiki" Description="@(LocaleHelper.Get("info_wiki_desc"))" Link="https://escapefromtarkov.fandom.com/wiki/Escape_from_Tarkov_Wiki"/>
+        <InfoCardComponent Name="Wiki Changelog" Description="@(LocaleHelper.Get("info_changelog_desc"))" Link="https://escapefromtarkov.fandom.com/wiki/Changelog"/>
     </MudGrid>
 </MudContainer>
 
 @code {
-
     // https://escapefromtarkov.fandom.com/wiki/Escape_from_Tarkov_Wiki
     // https://escapefromtarkov.fandom.com/wiki/Changelog
     // https://hub.sp-tarkov.com/
