--- a/project/SPTarkov.Launcher/Pages/Profile.razor
+++ b/project/SPTarkov.Launcher/Pages/Profile.razor
@@ -4,11 +4,11 @@
 @inject GameHelper GameHelper
 @inject ILogger<Profile> Logger
 @inject NavigationManager NavigationManager
+@inject LocaleHelper LocaleHelper
 
 <MudContainer Class="px-8 my-2 pa-0" MaxWidth="MaxWidth.Large">
     <MudContainer Class="pa-0 pb-4">
-        <MudButton Variant="Variant.Filled" Color="Color.Dark" OnClick="ReturnToProfiles" StartIcon="@Icons.Material.Filled.ArrowBack" Size="Size.Medium" IconColor="Color.Error">Logout of Profile</MudButton>
-        @* <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="ReturnToServers" StartIcon="@Icons.Material.Filled.ArrowBack">Disconnect</MudButton> *@
+        <MudButton Variant="Variant.Filled" Color="Color.Dark" OnClick="ReturnToProfiles" StartIcon="@Icons.Material.Filled.ArrowBack" Size="Size.Medium" IconColor="Color.Error">@(LocaleHelper.Get("profile_logout"))</MudButton>
     </MudContainer>
     <MudContainer Class="pa-0 pb-4">
         <ProfileStatsComponent MiniProfile="@selectedMiniProfile"/>
@@ -28,9 +28,7 @@
             <MudText Class="mb-n2 no-pointers no-select" Typo="Typo.caption">GP:</MudText>
             <MudText Typo="Typo.h6">1,000,000,000</MudText>
         </MudPaper>
-        <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="StartGame"
-                   EndIcon="@Icons.Material.Filled.ArrowRight">Start Game
-        </MudButton>
+        <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="StartGame" EndIcon="@Icons.Material.Filled.ArrowRight">@(LocaleHelper.Get("profile_start_game"))</MudButton>
     </MudContainer>
 </MudContainer>
 
