--- a/project/SPTarkov.Launcher/Components/Settings/AdvancedPanelComponent.razor
+++ b/project/SPTarkov.Launcher/Components/Settings/AdvancedPanelComponent.razor
@@ -1,23 +1,25 @@
 ﻿@inject ConfigHelper ConfigHelper
 @inject StateHelper StateHelper
+@inject LocaleHelper LocaleHelper
 
 <MudItem sm="12">
     <MudPaper Class="pa-5 ml-1 gap-2 d-flex flex-column setting-on-hover-container mud-background-gray border-2 border-solid mud-border-lines-default" Elevation="3">
         <MudTooltip Arrow="true" Placement="Placement.Bottom" Color="Color.Info" Text="Image cannot be changed for now">
-            <SettingOptionComponent Switch="@showBackgroundSwitch" OptionName="Use Background Image" SwitchFunc="@SetBackgroundUsage"/>
+            <SettingSwitchComponent Switch="@showBackgroundSwitch" OptionName="Use Background Image" SwitchFunc="@SetBackgroundUsage"/>
         </MudTooltip>
+        <SettingLocaleComponent Options="@_localeOptions" OptionName="Language"/>
     </MudPaper>
 </MudItem>
 
 @code
 {
-    private bool advancedUserSwitch { get; set; }
     private bool showBackgroundSwitch { get; set; }
+    private Dictionary<string, string> _localeOptions { get; set; }
 
     protected override void OnInitialized()
     {
-        advancedUserSwitch = ConfigHelper.GetConfig().AdvancedUser;
         showBackgroundSwitch = ConfigHelper.GetConfig().UseBackground;
+        _localeOptions = LocaleHelper.GetAvailableLocales();
         base.OnInitialized();
     }
 
