Fix discord link

--- a/project/SPTarkov.Launcher/Pages/Info.razor
+++ b/project/SPTarkov.Launcher/Pages/Info.razor
@@ -7,7 +7,7 @@
         <InfoCardComponent Name="Hub" Description="@(LocaleHelper.Get("info_hub_desc"))" Link="https://hub.sp-tarkov.com/"/>
         <InfoCardComponent Name="Forge" Description="@(LocaleHelper.Get("info_forge_desc"))" Link="https://forge.sp-tarkov.com/"/>
         <InfoCardComponent Name="Github" Description="@(LocaleHelper.Get("info_github_desc"))" Link="https://github.com/sp-tarkov"/>
-        <InfoCardComponent Name="Discord" Description="@(LocaleHelper.Get("info_discord_desc"))" Link="https://discord.com/invite/Q7dhKh4e"/>
+        <InfoCardComponent Name="Discord" Description="@(LocaleHelper.Get("info_discord_desc"))" Link="https://discord.com/invite/Xn9msqQZan"/>
         <InfoCardComponent Name="Escape From Tarkov Wiki" Description="@(LocaleHelper.Get("info_wiki_desc"))" Link="https://escapefromtarkov.fandom.com/wiki/Escape_from_Tarkov_Wiki"/>
         <InfoCardComponent Name="Wiki Changelog" Description="@(LocaleHelper.Get("info_changelog_desc"))" Link="https://escapefromtarkov.fandom.com/wiki/Changelog"/>
     </MudGrid>
@@ -19,5 +19,5 @@
     // https://hub.sp-tarkov.com/
     // https://forge.sp-tarkov.com/
     // https://github.com/sp-tarkov
-    // https://discord.com/invite/Q7dhKh4e
+    // https://discord.com/invite/Xn9msqQZan
 }
